--- a/ProjectTemplate/CMakeLists.txt
+++ b/ProjectTemplate/CMakeLists.txt
@@ -1,21 +1,26 @@
 cmake_minimum_required(VERSION 3.10)
-project(OpenGLExample)
+project(${PROJECT_NAME})
 
 set(CMAKE_CXX_STANDARD 17)
 
+# Use bundled toolchain
+set(TOOLCHAIN_ROOT "${TOOLCHAIN_PATH}")
 
-set(CMAKE_PREFIX_PATH "C:/msys64/mingw64")
+# Platform-specific settings
+if(WIN32)
+    set(GLFW3_INCLUDE_DIR "${TOOLCHAIN_ROOT}/libs/include")
+    set(GLFW3_LIB_DIR "${TOOLCHAIN_ROOT}/libs/lib")
+    set(GLEW_INCLUDE_DIR "${TOOLCHAIN_ROOT}/libs/include")
+    set(GLEW_LIB_DIR "${TOOLCHAIN_ROOT}/libs/lib")
 
-# ---- Dependencies ----
-find_package(OpenGL REQUIRED)
-
-set(GLFW3_LIB_DIR "C:/msys64/mingw64/lib")
-set(GLFW3_INCLUDE_DIR "C:/msys64/mingw64/include")
-
-include_directories(${GLFW3_INCLUDE_DIR})
-link_directories(${GLFW3_LIB_DIR})
-
-
+    include_directories(${GLFW3_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
+    link_directories(${GLFW3_LIB_DIR} ${GLEW_LIB_DIR})
+else()
+    # Linux: use system libraries or bundled static libs
+    find_package(OpenGL REQUIRED)
+    find_package(glfw3 REQUIRED)
+    find_package(GLEW REQUIRED)
+endif()
 
 # ---- Executable ----
 add_executable(app
@@ -23,8 +28,17 @@ add_executable(app
 )
 
 # ---- Link libraries ----
-target_link_libraries(app
-        OpenGL32
-        glew32
-        glfw3
-)
+if(WIN32)
+    target_link_libraries(app
+            opengl32
+            glew32
+            glfw3
+            gdi32
+    )
+else()
+    target_link_libraries(app
+            OpenGL::GL
+            glfw
+            GLEW::GLEW
+    )
+endif()
