--- a/ProjectTemplate/CMakeLists.txt
+++ b/ProjectTemplate/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
-project(${PROJECT_NAME})
+project(OpenGLApp)
 
 set(CMAKE_CXX_STANDARD 17)
-
-# Use bundled toolchain
 set(TOOLCHAIN_ROOT "${TOOLCHAIN_PATH}")
 
-# Platform-specific settings
 if(WIN32)
     set(GLFW3_INCLUDE_DIR "${TOOLCHAIN_ROOT}/libs/include")
     set(GLFW3_LIB_DIR "${TOOLCHAIN_ROOT}/libs/lib")
@@ -16,15 +13,30 @@ if(WIN32)
     include_directories(${GLFW3_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
     link_directories(${GLFW3_LIB_DIR} ${GLEW_LIB_DIR})
 else()
-    # Linux: use system libraries or bundled static libs
     find_package(OpenGL REQUIRED)
     find_package(glfw3 REQUIRED)
     find_package(GLEW REQUIRED)
 endif()
 
-# ---- Executable ----
+
+
+# Find GLM
+find_package(glm REQUIRED)
+if(glm_FOUND)
+    include_directories(${GLM_INCLUDE_DIRS})
+endif()
+
+include_directories(
+        ${PROJECT_SOURCE_DIR}/engine
+        ${PROJECT_SOURCE_DIR}/src
+)
+# ---- Gather all .cpp files in engine/ and src/ ----
+file(GLOB_RECURSE ENGINE_SRC "engine/*.cpp")
+file(GLOB_RECURSE SRC_SRC "src/*.cpp")
+
 add_executable(app
-        src/main.cpp
+        ${ENGINE_SRC}
+        ${SRC_SRC}
 )
 
 # ---- Link libraries ----
@@ -38,7 +50,9 @@ if(WIN32)
 else()
     target_link_libraries(app
             OpenGL::GL
+            GLU
             glfw
             GLEW::GLEW
     )
 endif()
+
